implementation item modules