@@ -11,5 +11,43 @@
 
     <artifactId>items</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>eu.kgorecki</groupId>
+            <artifactId>userinterface</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
+        <!-- Test -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Spec.*</include>
+                    </includes>
+                    <argLine>
+                        --add-opens eu.kgorecki.rpgame.items/eu.kgorecki.rpgame.items=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
